# Coevo1_model

./: .gitignore  CMakeLists.txt  README.md  _cleanCmake.sh  codemeta.json  coevo.cpp
HELPERS/: AND_PATT.cpp  CMakeLists.txt  MAPAALT.cpp  MAPANOT.cpp  MAPAPATT.cpp  METEORY.CC  METEORY.cpp  PALETA.CC  PALETA.cpp  REALPATT.CC  REALPATT.cpp  dos&unix.h
INCLUDE/: Randoms.h
helpers-veryOld/: AND_PATT.CC  CENY.CC  CENYOLD.CC  CUTNAME.C  DOS&UNIX.H  DOS2UNI_.H  DRAW_LOG.CC  DRAW_LOG.CPP  MAPAALT.CC  MAPANOT.CC  MAPA_PATT.CC  METEOOLD.CC  RANDBOOL.CPP  SPECJALI.CC  WYPLATY.CC
historic-Old/: COEWO_V0_revisited.cpp  COEWO_revisited.cpp  coevo1.dev
historic-veryOld/: COEWO_V0.CC  COEWO_V0B.CC  COEWO_V1.CC
